<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <Switch
        android:id="@+id/publicSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchPadding="50dp"
        android:textColor="@color/text_primary"
        ></Switch>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/publicSwitchText"
            android:text="Private"></TextView>
    </LinearLayout>

    <EditText
        android:id="@+id/habit_title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Habit Title"
        android:maxLength= "20"
        android:inputType="textPersonName"
        android:textColor="@color/text_primary"/>

    <EditText
        android:id="@+id/habit_reason_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Habit Reason"
        android:maxLength = "30"
        android:inputType = "textPersonName"
        android:textColor="@color/text_primary"/>

    <ca.antonious.materialdaypicker.MaterialDayPicker
        android:id="@+id/day_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:text="Starting Date for The Habit" />

    <DatePicker
        android:id="@+id/habit_starting_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

</LinearLayout>